# lion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  install.ps1  install.sh  r.rs  s.cpp  something.py
.github/workflows/: release.yml
samples/: Cargo.toml
src/: config.rs  controller.rs  dependency.rs  languages.rs  main.rs  runner.rs  util.rs  utils.rs  writer.rs
src/commands/: mod.rs
src/config/: cargo.rs  global.rs  mod.rs  rust.rs  templating.rs
src/errors/: mod.rs
src/languages/: mod.rs
src/languages/c/: mod.rs
src/languages/cpp/: mod.rs
src/languages/go/: mod.rs
src/languages/java/: mod.rs
src/languages/javascript/: mod.rs
src/languages/python/: mod.rs
src/languages/rust/: mod.rs
src/languages/typescript/: mod.rs
src/templating/: config_def.rs  index.rs  mod.rs  search.rs
src/util/: mod.rs
test_local/inner/: b.txt  template.toml
