[package]
name = "Lion-cli"
version = "0.3.3"
edition = "2024"
authors = ["Umang Surana <no1umang@gmail.com>"]
license = "MIT"
description = "A developer tool to create files of different coding languages"
readme = "README.md"
homepage = "https://github.com/TeenCoder159/lion"
repository = "https://github.com/TeenCoder159/lion"
keywords = ["cli", "file"]
categories = ["command-line-utilities"]

[dependencies]
setter = "0.9.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
