[package]
name = "Lion-cli"
version = "0.5.0"
edition = "2024"
authors = ["Umang Surana <no1umang@gmail.com>"]
license = "MIT"
description = "A developer tool to create files of different coding languages"
readme = "README.md"
homepage = "https://github.com/TeenCoder159/lion"
repository = "https://github.com/TeenCoder159/lion"
keywords = ["cli", "file"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
map-ok = "1.0.0"
pathdiff = "0.2.3"
serde = { version = "1.0.226", features = ["derive"] }
setter = "0.9.2"
toml = "0.9.7"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
